<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_action_bar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/actionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/poll_question"
                    android:textAlignment="textStart"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/_14ssp" />

                <EditText
                    android:id="@+id/edtQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:autofillHints="name"
                    android:background="@drawable/bg_edt"
                    android:hint="@string/ask_a_question"
                    android:imeOptions="actionNext"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/lightBlack"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/answer_option"
                    android:textAlignment="textStart"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/txtOptionHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:singleLine="false"
                    android:text="@string/answer_option_hint"
                    android:textAlignment="textStart"
                    android:textColor="@color/lightBlack"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:id="@+id/lytAddOption"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@drawable/bg_btn"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/_4sdp">

                    <ImageView
                        android:id="@+id/imgBack"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:contentDescription="@string/back"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/ic_add"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="@string/add_option"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_add_option" />

                <TextView
                    android:id="@+id/txtCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_16sdp"
                    android:background="@drawable/bg_btn"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:paddingStart="@dimen/_24sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_24sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:singleLine="true"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>